5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1613_1800.log
== TEST (2019-04-02 22:58:31) 
-- CODE:
valor_a=float(input(a))
valor_b=float(input(b))
valor_c=float(input(c))
total= a+b+c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_a=float(input(a))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:59:01) 
-- CODE:
valor_a=float(input("a"))
valor_b=float(input("b"))
valor_c=float(input("c"))
total= a+b+c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= a+b+c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 23:00:42) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= a+b+c
print(total)
-- OUTPUT:
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 23:00:53) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= a+b+c
print(total)
-- EXECUTION TIME:
0.13657
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
75.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
985.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
212.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 23:03:50) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= a**2+b**2+c**2
print(total)
-- OUTPUT:
1925.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 23:04:51) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/a+b+c
print(total,  7)
-- OUTPUT:
151.25 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 23:05:30) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(total,  7)
-- OUTPUT:
25.666666666666668 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 23:06:02) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total,  7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 23:06:11) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total,  7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 23:06:13) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total,  7))
-- EXECUTION TIME:
0.214475
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 23:10:01) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total,  7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 23:10:21) 
-- CODE:
a=float(input("valor"))
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total,  7))
-- EXECUTION TIME:
0.129088
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:49:27) 
-- CODE:
a=float("valor")
b=float(input("valor"))
c=float(input("valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total,  7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=float("valor")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
